@@ -229,3 +229,4 @@
 #define ERR_DIRWALK_NAME        "DIRWALK: name %s/%s too long"
 #define ERR_DIRWALK_MISSING_USE "DIRWALK: missing USE statement"
 #define ERR_DIRWALK_CANT_OPEN   "DIRWALK: can't open %s"
+#define ERR_LINE_LENGTH         "Line length limit exceeded at text: '%s'"
